# tanizawa-2022lesson-sample-api

./: main.py  pyproject.toml
data/: L01-2022P-2K_13.csv
