[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["kitahara <kitahara@k-rea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

